// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly open the browser and reach the correct page 1`] = `
<Menu>
  <Menu
    align="start"
    animation={true}
    direction="bottom"
    keepMounted={true}
    menuButton={
      <img
        className="icon"
        src="img/icon.png"
      />
    }
    offsetX={0}
    offsetY={0}
    overflow="visible"
    position="auto"
    reposition="auto"
    submenuCloseDelay={150}
    submenuOpenDelay={300}
    viewScroll="initial"
  >
    <img
      className="icon"
      onClick={[Function]}
      onKeyDown={[Function]}
      src="img/icon.png"
    />
    <div
      className="rc-menu-container"
      onBlur={[Function]}
      onKeyDown={[Function]}
    />
  </Menu>
</Menu>
`;

exports[`should render correctly open the browser and reach the correct page 2`] = `
<Menu>
  <Menu
    align="start"
    animation={true}
    direction="bottom"
    keepMounted={true}
    menuButton={
      <img
        className="icon"
        src="img/icon.png"
      />
    }
    offsetX={0}
    offsetY={0}
    overflow="visible"
    position="auto"
    reposition="auto"
    submenuCloseDelay={150}
    submenuOpenDelay={300}
    viewScroll="initial"
  >
    <img
      className="icon"
      onClick={[Function]}
      onKeyDown={[Function]}
      src="img/icon.png"
    />
    <div
      className="rc-menu-container"
      onBlur={[Function]}
      onKeyDown={[Function]}
    >
      <Memo(MenuList)
        align="start"
        anchorRef={
          Object {
            "current": <img
              class="icon"
              src="img/icon.png"
            />,
          }
        }
        ariaLabel="Menu"
        containerRef={
          Object {
            "current": <div
              class="rc-menu-container"
            >
              <ul
                aria-label="Menu"
                class="rc-menu rc-menu--open rc-menu--animation rc-menu--dir-bottom"
                role="menu"
                style="left: 0px; top: 0px;"
                tabindex="-1"
              >
                <li
                  class="rc-menu__submenu"
                  role="presentation"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="true"
                    class="rc-menu__item"
                    role="menuitem"
                    tabindex="-1"
                  >
                    File
                  </div>
                </li>
                <li
                  class="rc-menu__submenu"
                  role="presentation"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="true"
                    class="rc-menu__item"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Edit
                  </div>
                </li>
                <li
                  class="rc-menu__submenu"
                  role="presentation"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="true"
                    class="rc-menu__item"
                    role="menuitem"
                    tabindex="-1"
                  >
                    View
                  </div>
                </li>
                <li
                  class="rc-menu__submenu"
                  role="presentation"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="true"
                    class="rc-menu__item"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Machines
                  </div>
                </li>
                <li
                  class="rc-menu__submenu"
                  role="presentation"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="true"
                    class="rc-menu__item"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Help
                  </div>
                </li>
              </ul>
            </div>,
          }
        }
        direction="bottom"
        isOpen={true}
        menuItemFocus={
          Object {
            "position": "initial",
          }
        }
        offsetX={0}
        offsetY={0}
        onClose={[Function]}
        overflow="visible"
        position="auto"
      >
        <ul
          aria-label="Menu"
          className="rc-menu rc-menu--open rc-menu--animation rc-menu--dir-bottom"
          onAnimationEnd={[Function]}
          onKeyDown={[Function]}
          role="menu"
          style={
            Object {
              "left": "0px",
              "top": "0px",
            }
          }
          tabIndex="-1"
        >
          <SubMenu
            align="start"
            direction="right"
            index={0}
            keepMounted={true}
            key=".0"
            label="File"
            offsetX={0}
            offsetY={0}
            overflow="visible"
            position="auto"
          >
            <li
              className="rc-menu__submenu"
              onBlur={[Function]}
              onKeyDown={[Function]}
              role="presentation"
            >
              <div
                aria-expanded={false}
                aria-haspopup="true"
                className="rc-menu__item"
                onBlur={[Function]}
                onClick={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onPointerDown={[Function]}
                onPointerLeave={[Function]}
                onPointerUp={[Function]}
                role="menuitem"
                tabIndex={-1}
              >
                File
              </div>
            </li>
          </SubMenu>
          <SubMenu
            align="start"
            direction="right"
            index={1}
            keepMounted={true}
            key=".1"
            label="Edit"
            offsetX={0}
            offsetY={0}
            overflow="visible"
            position="auto"
          >
            <li
              className="rc-menu__submenu"
              onBlur={[Function]}
              onKeyDown={[Function]}
              role="presentation"
            >
              <div
                aria-expanded={false}
                aria-haspopup="true"
                className="rc-menu__item"
                onBlur={[Function]}
                onClick={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onPointerDown={[Function]}
                onPointerLeave={[Function]}
                onPointerUp={[Function]}
                role="menuitem"
                tabIndex={-1}
              >
                Edit
              </div>
            </li>
          </SubMenu>
          <SubMenu
            align="start"
            direction="right"
            index={2}
            keepMounted={true}
            key=".2"
            label="View"
            offsetX={0}
            offsetY={0}
            overflow="visible"
            position="auto"
          >
            <li
              className="rc-menu__submenu"
              onBlur={[Function]}
              onKeyDown={[Function]}
              role="presentation"
            >
              <div
                aria-expanded={false}
                aria-haspopup="true"
                className="rc-menu__item"
                onBlur={[Function]}
                onClick={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onPointerDown={[Function]}
                onPointerLeave={[Function]}
                onPointerUp={[Function]}
                role="menuitem"
                tabIndex={-1}
              >
                View
              </div>
            </li>
          </SubMenu>
          <SubMenu
            align="start"
            direction="right"
            index={3}
            keepMounted={true}
            key=".3"
            label="Machines"
            offsetX={0}
            offsetY={0}
            overflow="visible"
            position="auto"
          >
            <li
              className="rc-menu__submenu"
              onBlur={[Function]}
              onKeyDown={[Function]}
              role="presentation"
            >
              <div
                aria-expanded={false}
                aria-haspopup="true"
                className="rc-menu__item"
                onBlur={[Function]}
                onClick={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onPointerDown={[Function]}
                onPointerLeave={[Function]}
                onPointerUp={[Function]}
                role="menuitem"
                tabIndex={-1}
              >
                Machines
              </div>
            </li>
          </SubMenu>
          <SubMenu
            align="start"
            direction="right"
            index={4}
            keepMounted={true}
            key=".4"
            label="Help"
            offsetX={0}
            offsetY={0}
            overflow="visible"
            position="auto"
          >
            <li
              className="rc-menu__submenu"
              onBlur={[Function]}
              onKeyDown={[Function]}
              role="presentation"
            >
              <div
                aria-expanded={false}
                aria-haspopup="true"
                className="rc-menu__item"
                onBlur={[Function]}
                onClick={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onPointerDown={[Function]}
                onPointerLeave={[Function]}
                onPointerUp={[Function]}
                role="menuitem"
                tabIndex={-1}
              >
                Help
              </div>
            </li>
          </SubMenu>
        </ul>
      </Memo(MenuList)>
    </div>
  </Menu>
</Menu>
`;

exports[`should render correctly open the browser and reach the correct page 3`] = `
<Menu>
  <Menu
    align="start"
    animation={true}
    direction="bottom"
    keepMounted={true}
    menuButton={
      <img
        className="icon"
        src="img/icon.png"
      />
    }
    offsetX={0}
    offsetY={0}
    overflow="visible"
    position="auto"
    reposition="auto"
    submenuCloseDelay={150}
    submenuOpenDelay={300}
    viewScroll="initial"
  >
    <img
      className="icon"
      onClick={[Function]}
      onKeyDown={[Function]}
      src="img/icon.png"
    />
    <div
      className="rc-menu-container"
      onBlur={[Function]}
      onKeyDown={[Function]}
    >
      <Memo(MenuList)
        align="start"
        anchorRef={
          Object {
            "current": <img
              class="icon"
              src="img/icon.png"
            />,
          }
        }
        ariaLabel="Menu"
        containerRef={
          Object {
            "current": <div
              class="rc-menu-container"
            >
              <ul
                aria-label="Menu"
                class="rc-menu rc-menu--open rc-menu--animation rc-menu--dir-bottom"
                role="menu"
                style="left: 0px; top: 0px;"
                tabindex="-1"
              >
                <li
                  class="rc-menu__submenu"
                  role="presentation"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="true"
                    class="rc-menu__item"
                    role="menuitem"
                    tabindex="-1"
                  >
                    File
                  </div>
                </li>
                <li
                  class="rc-menu__submenu"
                  role="presentation"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="true"
                    class="rc-menu__item"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Edit
                  </div>
                </li>
                <li
                  class="rc-menu__submenu"
                  role="presentation"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="true"
                    class="rc-menu__item"
                    role="menuitem"
                    tabindex="-1"
                  >
                    View
                  </div>
                </li>
                <li
                  class="rc-menu__submenu"
                  role="presentation"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="true"
                    class="rc-menu__item"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Machines
                  </div>
                </li>
                <li
                  class="rc-menu__submenu"
                  role="presentation"
                >
                  <div
                    aria-expanded="true"
                    aria-haspopup="true"
                    class="rc-menu__item rc-menu__item--open"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Help
                  </div>
                  <ul
                    aria-label="Help"
                    class="rc-menu rc-menu--open rc-menu--animation rc-menu--dir-right"
                    role="menu"
                    style="left: 0px; top: 0px;"
                    tabindex="-1"
                  >
                    <li
                      class="rc-menu__item"
                      role="menuitem"
                      tabindex="-1"
                    >
                      About Beam Studio
                    </li>
                    <li
                      class="rc-menu__item"
                      role="menuitem"
                      tabindex="-1"
                    >
                      Show Start Tutorial
                    </li>
                    <li
                      class="rc-menu__item"
                      role="menuitem"
                      tabindex="-1"
                    >
                      Show Interface Introduction
                    </li>
                    <li
                      class="rc-menu__item"
                      role="menuitem"
                      tabindex="-1"
                    >
                      Feedback Questionnaire
                    </li>
                    <li
                      class="rc-menu__item"
                      role="menuitem"
                      tabindex="-1"
                    >
                      Change Logs
                    </li>
                    <li
                      class="rc-menu__item"
                      role="menuitem"
                      tabindex="-1"
                    >
                      Help Center
                    </li>
                    <li
                      class="rc-menu__item"
                      role="menuitem"
                      tabindex="-1"
                    >
                      Contact Us
                    </li>
                    <li
                      class="rc-menu__divider"
                      role="separator"
                    />
                    <li
                      class="rc-menu__item"
                      role="menuitem"
                      tabindex="-1"
                    >
                      Community Forum
                    </li>
                    <li
                      class="rc-menu__divider"
                      role="separator"
                    />
                    <li
                      class="rc-menu__item"
                      role="menuitem"
                      tabindex="-1"
                    >
                      Manage My Account
                    </li>
                    <li
                      class="rc-menu__item"
                      role="menuitem"
                      tabindex="-1"
                    >
                      Sign In
                    </li>
                    <li
                      class="rc-menu__divider"
                      role="separator"
                    />
                    <li
                      class="rc-menu__item"
                      role="menuitem"
                      tabindex="-1"
                    >
                      Bug Report
                    </li>
                    <li
                      class="rc-menu__item"
                      role="menuitem"
                      tabindex="-1"
                    >
                      Debug Tool
                    </li>
                  </ul>
                </li>
              </ul>
            </div>,
          }
        }
        direction="bottom"
        isOpen={true}
        menuItemFocus={
          Object {
            "position": "initial",
          }
        }
        offsetX={0}
        offsetY={0}
        onClose={[Function]}
        overflow="visible"
        position="auto"
      >
        <ul
          aria-label="Menu"
          className="rc-menu rc-menu--open rc-menu--animation rc-menu--dir-bottom"
          onAnimationEnd={[Function]}
          onKeyDown={[Function]}
          role="menu"
          style={
            Object {
              "left": "0px",
              "top": "0px",
            }
          }
          tabIndex="-1"
        >
          <SubMenu
            align="start"
            direction="right"
            index={0}
            keepMounted={true}
            key=".0"
            label="File"
            offsetX={0}
            offsetY={0}
            overflow="visible"
            position="auto"
          >
            <li
              className="rc-menu__submenu"
              onBlur={[Function]}
              onKeyDown={[Function]}
              role="presentation"
            >
              <div
                aria-expanded={false}
                aria-haspopup="true"
                className="rc-menu__item"
                onBlur={[Function]}
                onClick={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onPointerDown={[Function]}
                onPointerLeave={[Function]}
                onPointerUp={[Function]}
                role="menuitem"
                tabIndex={-1}
              >
                File
              </div>
            </li>
          </SubMenu>
          <SubMenu
            align="start"
            direction="right"
            index={1}
            keepMounted={true}
            key=".1"
            label="Edit"
            offsetX={0}
            offsetY={0}
            overflow="visible"
            position="auto"
          >
            <li
              className="rc-menu__submenu"
              onBlur={[Function]}
              onKeyDown={[Function]}
              role="presentation"
            >
              <div
                aria-expanded={false}
                aria-haspopup="true"
                className="rc-menu__item"
                onBlur={[Function]}
                onClick={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onPointerDown={[Function]}
                onPointerLeave={[Function]}
                onPointerUp={[Function]}
                role="menuitem"
                tabIndex={-1}
              >
                Edit
              </div>
            </li>
          </SubMenu>
          <SubMenu
            align="start"
            direction="right"
            index={2}
            keepMounted={true}
            key=".2"
            label="View"
            offsetX={0}
            offsetY={0}
            overflow="visible"
            position="auto"
          >
            <li
              className="rc-menu__submenu"
              onBlur={[Function]}
              onKeyDown={[Function]}
              role="presentation"
            >
              <div
                aria-expanded={false}
                aria-haspopup="true"
                className="rc-menu__item"
                onBlur={[Function]}
                onClick={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onPointerDown={[Function]}
                onPointerLeave={[Function]}
                onPointerUp={[Function]}
                role="menuitem"
                tabIndex={-1}
              >
                View
              </div>
            </li>
          </SubMenu>
          <SubMenu
            align="start"
            direction="right"
            index={3}
            keepMounted={true}
            key=".3"
            label="Machines"
            offsetX={0}
            offsetY={0}
            overflow="visible"
            position="auto"
          >
            <li
              className="rc-menu__submenu"
              onBlur={[Function]}
              onKeyDown={[Function]}
              role="presentation"
            >
              <div
                aria-expanded={false}
                aria-haspopup="true"
                className="rc-menu__item"
                onBlur={[Function]}
                onClick={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onPointerDown={[Function]}
                onPointerLeave={[Function]}
                onPointerUp={[Function]}
                role="menuitem"
                tabIndex={-1}
              >
                Machines
              </div>
            </li>
          </SubMenu>
          <SubMenu
            align="start"
            direction="right"
            index={4}
            keepMounted={true}
            key=".4"
            label="Help"
            offsetX={0}
            offsetY={0}
            overflow="visible"
            position="auto"
          >
            <li
              className="rc-menu__submenu"
              onBlur={[Function]}
              onKeyDown={[Function]}
              role="presentation"
            >
              <div
                aria-expanded={true}
                aria-haspopup="true"
                className="rc-menu__item rc-menu__item--open"
                onBlur={[Function]}
                onClick={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onPointerDown={[Function]}
                onPointerLeave={[Function]}
                onPointerUp={[Function]}
                role="menuitem"
                tabIndex={-1}
              >
                Help
              </div>
              <Memo(MenuList)
                align="start"
                anchorRef={
                  Object {
                    "current": <div
                      aria-expanded="true"
                      aria-haspopup="true"
                      class="rc-menu__item rc-menu__item--open"
                      role="menuitem"
                      tabindex="-1"
                    >
                      Help
                    </div>,
                  }
                }
                ariaLabel="Help"
                containerRef={
                  Object {
                    "current": <li
                      class="rc-menu__submenu"
                      role="presentation"
                    >
                      <div
                        aria-expanded="true"
                        aria-haspopup="true"
                        class="rc-menu__item rc-menu__item--open"
                        role="menuitem"
                        tabindex="-1"
                      >
                        Help
                      </div>
                      <ul
                        aria-label="Help"
                        class="rc-menu rc-menu--open rc-menu--animation rc-menu--dir-right"
                        role="menu"
                        style="left: 0px; top: 0px;"
                        tabindex="-1"
                      >
                        <li
                          class="rc-menu__item"
                          role="menuitem"
                          tabindex="-1"
                        >
                          About Beam Studio
                        </li>
                        <li
                          class="rc-menu__item"
                          role="menuitem"
                          tabindex="-1"
                        >
                          Show Start Tutorial
                        </li>
                        <li
                          class="rc-menu__item"
                          role="menuitem"
                          tabindex="-1"
                        >
                          Show Interface Introduction
                        </li>
                        <li
                          class="rc-menu__item"
                          role="menuitem"
                          tabindex="-1"
                        >
                          Feedback Questionnaire
                        </li>
                        <li
                          class="rc-menu__item"
                          role="menuitem"
                          tabindex="-1"
                        >
                          Change Logs
                        </li>
                        <li
                          class="rc-menu__item"
                          role="menuitem"
                          tabindex="-1"
                        >
                          Help Center
                        </li>
                        <li
                          class="rc-menu__item"
                          role="menuitem"
                          tabindex="-1"
                        >
                          Contact Us
                        </li>
                        <li
                          class="rc-menu__divider"
                          role="separator"
                        />
                        <li
                          class="rc-menu__item"
                          role="menuitem"
                          tabindex="-1"
                        >
                          Community Forum
                        </li>
                        <li
                          class="rc-menu__divider"
                          role="separator"
                        />
                        <li
                          class="rc-menu__item"
                          role="menuitem"
                          tabindex="-1"
                        >
                          Manage My Account
                        </li>
                        <li
                          class="rc-menu__item"
                          role="menuitem"
                          tabindex="-1"
                        >
                          Sign In
                        </li>
                        <li
                          class="rc-menu__divider"
                          role="separator"
                        />
                        <li
                          class="rc-menu__item"
                          role="menuitem"
                          tabindex="-1"
                        >
                          Bug Report
                        </li>
                        <li
                          class="rc-menu__item"
                          role="menuitem"
                          tabindex="-1"
                        >
                          Debug Tool
                        </li>
                      </ul>
                    </li>,
                  }
                }
                direction="right"
                isDisabled={false}
                isOpen={true}
                menuItemFocus={
                  Object {
                    "position": "initial",
                  }
                }
                offsetX={0}
                offsetY={0}
                overflow="visible"
                position="auto"
              >
                <ul
                  aria-label="Help"
                  className="rc-menu rc-menu--open rc-menu--animation rc-menu--dir-right"
                  onAnimationEnd={[Function]}
                  onKeyDown={[Function]}
                  role="menu"
                  style={
                    Object {
                      "left": "0px",
                      "top": "0px",
                    }
                  }
                  tabIndex="-1"
                >
                  <Memo(MenuItem)
                    index={0}
                    key=".0"
                    onClick={[Function]}
                  >
                    <li
                      className="rc-menu__item"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      onKeyUp={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onPointerDown={[Function]}
                      onPointerLeave={[Function]}
                      onPointerUp={[Function]}
                      role="menuitem"
                      tabIndex={-1}
                    >
                      About Beam Studio
                    </li>
                  </Memo(MenuItem)>
                  <Memo(MenuItem)
                    index={1}
                    key=".1"
                    onClick={[Function]}
                  >
                    <li
                      className="rc-menu__item"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      onKeyUp={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onPointerDown={[Function]}
                      onPointerLeave={[Function]}
                      onPointerUp={[Function]}
                      role="menuitem"
                      tabIndex={-1}
                    >
                      Show Start Tutorial
                    </li>
                  </Memo(MenuItem)>
                  <Memo(MenuItem)
                    index={2}
                    key=".2"
                    onClick={[Function]}
                  >
                    <li
                      className="rc-menu__item"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      onKeyUp={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onPointerDown={[Function]}
                      onPointerLeave={[Function]}
                      onPointerUp={[Function]}
                      role="menuitem"
                      tabIndex={-1}
                    >
                      Show Interface Introduction
                    </li>
                  </Memo(MenuItem)>
                  <Memo(MenuItem)
                    index={3}
                    key=".3"
                    onClick={[Function]}
                  >
                    <li
                      className="rc-menu__item"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      onKeyUp={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onPointerDown={[Function]}
                      onPointerLeave={[Function]}
                      onPointerUp={[Function]}
                      role="menuitem"
                      tabIndex={-1}
                    >
                      Feedback Questionnaire
                    </li>
                  </Memo(MenuItem)>
                  <Memo(MenuItem)
                    index={4}
                    key=".4"
                    onClick={[Function]}
                  >
                    <li
                      className="rc-menu__item"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      onKeyUp={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onPointerDown={[Function]}
                      onPointerLeave={[Function]}
                      onPointerUp={[Function]}
                      role="menuitem"
                      tabIndex={-1}
                    >
                      Change Logs
                    </li>
                  </Memo(MenuItem)>
                  <Memo(MenuItem)
                    index={5}
                    key=".5"
                    onClick={[Function]}
                  >
                    <li
                      className="rc-menu__item"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      onKeyUp={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onPointerDown={[Function]}
                      onPointerLeave={[Function]}
                      onPointerUp={[Function]}
                      role="menuitem"
                      tabIndex={-1}
                    >
                      Help Center
                    </li>
                  </Memo(MenuItem)>
                  <Memo(MenuItem)
                    index={6}
                    key=".6"
                    onClick={[Function]}
                  >
                    <li
                      className="rc-menu__item"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      onKeyUp={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onPointerDown={[Function]}
                      onPointerLeave={[Function]}
                      onPointerUp={[Function]}
                      role="menuitem"
                      tabIndex={-1}
                    >
                      Contact Us
                    </li>
                  </Memo(MenuItem)>
                  <Memo(MenuDivider)
                    key=".7"
                  >
                    <li
                      className="rc-menu__divider"
                      role="separator"
                    />
                  </Memo(MenuDivider)>
                  <Memo(MenuItem)
                    index={7}
                    key=".8"
                    onClick={[Function]}
                  >
                    <li
                      className="rc-menu__item"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      onKeyUp={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onPointerDown={[Function]}
                      onPointerLeave={[Function]}
                      onPointerUp={[Function]}
                      role="menuitem"
                      tabIndex={-1}
                    >
                      Community Forum
                    </li>
                  </Memo(MenuItem)>
                  <Memo(MenuDivider)
                    key=".9"
                  >
                    <li
                      className="rc-menu__divider"
                      role="separator"
                    />
                  </Memo(MenuDivider)>
                  <Memo(MenuItem)
                    index={8}
                    key=".a"
                    onClick={[Function]}
                  >
                    <li
                      className="rc-menu__item"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      onKeyUp={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onPointerDown={[Function]}
                      onPointerLeave={[Function]}
                      onPointerUp={[Function]}
                      role="menuitem"
                      tabIndex={-1}
                    >
                      Manage My Account
                    </li>
                  </Memo(MenuItem)>
                  <Memo(MenuItem)
                    index={9}
                    key=".b"
                    onClick={[Function]}
                  >
                    <li
                      className="rc-menu__item"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      onKeyUp={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onPointerDown={[Function]}
                      onPointerLeave={[Function]}
                      onPointerUp={[Function]}
                      role="menuitem"
                      tabIndex={-1}
                    >
                      Sign In
                    </li>
                  </Memo(MenuItem)>
                  <Memo(MenuDivider)
                    key=".c"
                  >
                    <li
                      className="rc-menu__divider"
                      role="separator"
                    />
                  </Memo(MenuDivider)>
                  <Memo(MenuItem)
                    index={10}
                    key=".d"
                    onClick={[Function]}
                  >
                    <li
                      className="rc-menu__item"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      onKeyUp={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onPointerDown={[Function]}
                      onPointerLeave={[Function]}
                      onPointerUp={[Function]}
                      role="menuitem"
                      tabIndex={-1}
                    >
                      Bug Report
                    </li>
                  </Memo(MenuItem)>
                  <Memo(MenuItem)
                    index={11}
                    key=".e"
                  >
                    <li
                      className="rc-menu__item"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      onKeyUp={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onPointerDown={[Function]}
                      onPointerLeave={[Function]}
                      onPointerUp={[Function]}
                      role="menuitem"
                      tabIndex={-1}
                    >
                      Debug Tool
                    </li>
                  </Memo(MenuItem)>
                </ul>
              </Memo(MenuList)>
            </li>
          </SubMenu>
        </ul>
      </Memo(MenuList)>
    </div>
  </Menu>
</Menu>
`;

exports[`should render correctly test checkbox menu item 1`] = `
<Menu>
  <Menu
    align="start"
    animation={true}
    direction="bottom"
    keepMounted={true}
    menuButton={
      <img
        className="icon"
        src="img/icon.png"
      />
    }
    offsetX={0}
    offsetY={0}
    overflow="visible"
    position="auto"
    reposition="auto"
    submenuCloseDelay={150}
    submenuOpenDelay={300}
    viewScroll="initial"
  >
    <img
      className="icon"
      onClick={[Function]}
      onKeyDown={[Function]}
      src="img/icon.png"
    />
    <div
      className="rc-menu-container"
      onBlur={[Function]}
      onKeyDown={[Function]}
    />
  </Menu>
</Menu>
`;

exports[`should render correctly test checkbox menu item 2`] = `
<Menu>
  <Menu
    align="start"
    animation={true}
    direction="bottom"
    keepMounted={true}
    menuButton={
      <img
        className="icon"
        src="img/icon.png"
      />
    }
    offsetX={0}
    offsetY={0}
    overflow="visible"
    position="auto"
    reposition="auto"
    submenuCloseDelay={150}
    submenuOpenDelay={300}
    viewScroll="initial"
  >
    <img
      className="icon"
      onClick={[Function]}
      onKeyDown={[Function]}
      src="img/icon.png"
    />
    <div
      className="rc-menu-container"
      onBlur={[Function]}
      onKeyDown={[Function]}
    >
      <Memo(MenuList)
        align="start"
        anchorRef={
          Object {
            "current": <img
              class="icon"
              src="img/icon.png"
            />,
          }
        }
        ariaLabel="Menu"
        containerRef={
          Object {
            "current": <div
              class="rc-menu-container"
            >
              <ul
                aria-label="Menu"
                class="rc-menu rc-menu--open rc-menu--animation rc-menu--dir-bottom"
                role="menu"
                style="left: 0px; top: 0px;"
                tabindex="-1"
              >
                <li
                  class="rc-menu__submenu"
                  role="presentation"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="true"
                    class="rc-menu__item"
                    role="menuitem"
                    tabindex="-1"
                  >
                    File
                  </div>
                </li>
                <li
                  class="rc-menu__submenu"
                  role="presentation"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="true"
                    class="rc-menu__item"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Edit
                  </div>
                </li>
                <li
                  class="rc-menu__submenu"
                  role="presentation"
                >
                  <div
                    aria-expanded="true"
                    aria-haspopup="true"
                    class="rc-menu__item rc-menu__item--open"
                    role="menuitem"
                    tabindex="-1"
                  >
                    View
                  </div>
                  <ul
                    aria-label="View"
                    class="rc-menu rc-menu--open rc-menu--animation rc-menu--dir-right"
                    role="menu"
                    style="left: 0px; top: 0px;"
                    tabindex="-1"
                  >
                    <li
                      class="rc-menu__item rc-menu__item--type-checkbox"
                      role="menuitem"
                      tabindex="-1"
                    >
                      <span
                        class="action"
                      >
                        Zoom In
                      </span>
                      <span
                        class="hotkey"
                      >
                        ⌘+
                      </span>
                    </li>
                    <li
                      class="rc-menu__item rc-menu__item--type-checkbox"
                      role="menuitem"
                      tabindex="-1"
                    >
                      <span
                        class="action"
                      >
                        Zoom Out
                      </span>
                      <span
                        class="hotkey"
                      >
                        ⌘-
                      </span>
                    </li>
                    <li
                      class="rc-menu__item rc-menu__item--type-checkbox"
                      role="menuitem"
                      tabindex="-1"
                    >
                      Fit to Window Size
                    </li>
                    <li
                      aria-checked="false"
                      class="rc-menu__item rc-menu__item--type-checkbox"
                      role="menuitemcheckbox"
                      tabindex="-1"
                    >
                      Auto Fit to Window Size
                    </li>
                    <li
                      class="rc-menu__divider"
                      role="separator"
                    />
                    <li
                      aria-checked="true"
                      class="rc-menu__item rc-menu__item--type-checkbox rc-menu__item--checked"
                      role="menuitemcheckbox"
                      tabindex="-1"
                    >
                      Show Grids
                    </li>
                    <li
                      aria-checked="false"
                      class="rc-menu__item rc-menu__item--type-checkbox"
                      role="menuitemcheckbox"
                      tabindex="-1"
                    >
                      Show Rulers
                    </li>
                    <li
                      aria-checked="false"
                      class="rc-menu__item rc-menu__item--type-checkbox"
                      role="menuitemcheckbox"
                      tabindex="-1"
                    >
                      Use Layer Color
                    </li>
                  </ul>
                </li>
                <li
                  class="rc-menu__submenu"
                  role="presentation"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="true"
                    class="rc-menu__item"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Machines
                  </div>
                </li>
                <li
                  class="rc-menu__submenu"
                  role="presentation"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="true"
                    class="rc-menu__item"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Help
                  </div>
                </li>
              </ul>
            </div>,
          }
        }
        direction="bottom"
        isOpen={true}
        menuItemFocus={
          Object {
            "position": "initial",
          }
        }
        offsetX={0}
        offsetY={0}
        onClose={[Function]}
        overflow="visible"
        position="auto"
      >
        <ul
          aria-label="Menu"
          className="rc-menu rc-menu--open rc-menu--animation rc-menu--dir-bottom"
          onAnimationEnd={[Function]}
          onKeyDown={[Function]}
          role="menu"
          style={
            Object {
              "left": "0px",
              "top": "0px",
            }
          }
          tabIndex="-1"
        >
          <SubMenu
            align="start"
            direction="right"
            index={0}
            keepMounted={true}
            key=".0"
            label="File"
            offsetX={0}
            offsetY={0}
            overflow="visible"
            position="auto"
          >
            <li
              className="rc-menu__submenu"
              onBlur={[Function]}
              onKeyDown={[Function]}
              role="presentation"
            >
              <div
                aria-expanded={false}
                aria-haspopup="true"
                className="rc-menu__item"
                onBlur={[Function]}
                onClick={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onPointerDown={[Function]}
                onPointerLeave={[Function]}
                onPointerUp={[Function]}
                role="menuitem"
                tabIndex={-1}
              >
                File
              </div>
            </li>
          </SubMenu>
          <SubMenu
            align="start"
            direction="right"
            index={1}
            keepMounted={true}
            key=".1"
            label="Edit"
            offsetX={0}
            offsetY={0}
            overflow="visible"
            position="auto"
          >
            <li
              className="rc-menu__submenu"
              onBlur={[Function]}
              onKeyDown={[Function]}
              role="presentation"
            >
              <div
                aria-expanded={false}
                aria-haspopup="true"
                className="rc-menu__item"
                onBlur={[Function]}
                onClick={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onPointerDown={[Function]}
                onPointerLeave={[Function]}
                onPointerUp={[Function]}
                role="menuitem"
                tabIndex={-1}
              >
                Edit
              </div>
            </li>
          </SubMenu>
          <SubMenu
            align="start"
            direction="right"
            index={2}
            keepMounted={true}
            key=".2"
            label="View"
            offsetX={0}
            offsetY={0}
            overflow="visible"
            position="auto"
          >
            <li
              className="rc-menu__submenu"
              onBlur={[Function]}
              onKeyDown={[Function]}
              role="presentation"
            >
              <div
                aria-expanded={true}
                aria-haspopup="true"
                className="rc-menu__item rc-menu__item--open"
                onBlur={[Function]}
                onClick={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onPointerDown={[Function]}
                onPointerLeave={[Function]}
                onPointerUp={[Function]}
                role="menuitem"
                tabIndex={-1}
              >
                View
              </div>
              <Memo(MenuList)
                align="start"
                anchorRef={
                  Object {
                    "current": <div
                      aria-expanded="true"
                      aria-haspopup="true"
                      class="rc-menu__item rc-menu__item--open"
                      role="menuitem"
                      tabindex="-1"
                    >
                      View
                    </div>,
                  }
                }
                ariaLabel="View"
                containerRef={
                  Object {
                    "current": <li
                      class="rc-menu__submenu"
                      role="presentation"
                    >
                      <div
                        aria-expanded="true"
                        aria-haspopup="true"
                        class="rc-menu__item rc-menu__item--open"
                        role="menuitem"
                        tabindex="-1"
                      >
                        View
                      </div>
                      <ul
                        aria-label="View"
                        class="rc-menu rc-menu--open rc-menu--animation rc-menu--dir-right"
                        role="menu"
                        style="left: 0px; top: 0px;"
                        tabindex="-1"
                      >
                        <li
                          class="rc-menu__item rc-menu__item--type-checkbox"
                          role="menuitem"
                          tabindex="-1"
                        >
                          <span
                            class="action"
                          >
                            Zoom In
                          </span>
                          <span
                            class="hotkey"
                          >
                            ⌘+
                          </span>
                        </li>
                        <li
                          class="rc-menu__item rc-menu__item--type-checkbox"
                          role="menuitem"
                          tabindex="-1"
                        >
                          <span
                            class="action"
                          >
                            Zoom Out
                          </span>
                          <span
                            class="hotkey"
                          >
                            ⌘-
                          </span>
                        </li>
                        <li
                          class="rc-menu__item rc-menu__item--type-checkbox"
                          role="menuitem"
                          tabindex="-1"
                        >
                          Fit to Window Size
                        </li>
                        <li
                          aria-checked="false"
                          class="rc-menu__item rc-menu__item--type-checkbox"
                          role="menuitemcheckbox"
                          tabindex="-1"
                        >
                          Auto Fit to Window Size
                        </li>
                        <li
                          class="rc-menu__divider"
                          role="separator"
                        />
                        <li
                          aria-checked="true"
                          class="rc-menu__item rc-menu__item--type-checkbox rc-menu__item--checked"
                          role="menuitemcheckbox"
                          tabindex="-1"
                        >
                          Show Grids
                        </li>
                        <li
                          aria-checked="false"
                          class="rc-menu__item rc-menu__item--type-checkbox"
                          role="menuitemcheckbox"
                          tabindex="-1"
                        >
                          Show Rulers
                        </li>
                        <li
                          aria-checked="false"
                          class="rc-menu__item rc-menu__item--type-checkbox"
                          role="menuitemcheckbox"
                          tabindex="-1"
                        >
                          Use Layer Color
                        </li>
                      </ul>
                    </li>,
                  }
                }
                direction="right"
                isDisabled={false}
                isOpen={true}
                menuItemFocus={
                  Object {
                    "position": "initial",
                  }
                }
                offsetX={0}
                offsetY={0}
                overflow="visible"
                position="auto"
              >
                <ul
                  aria-label="View"
                  className="rc-menu rc-menu--open rc-menu--animation rc-menu--dir-right"
                  onAnimationEnd={[Function]}
                  onKeyDown={[Function]}
                  role="menu"
                  style={
                    Object {
                      "left": "0px",
                      "top": "0px",
                    }
                  }
                  tabIndex="-1"
                >
                  <Memo(MenuItem)
                    className="rc-menu__item--type-checkbox"
                    index={0}
                    key=".0"
                    onClick={[Function]}
                  >
                    <li
                      className="rc-menu__item rc-menu__item--type-checkbox"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      onKeyUp={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onPointerDown={[Function]}
                      onPointerLeave={[Function]}
                      onPointerUp={[Function]}
                      role="menuitem"
                      tabIndex={-1}
                    >
                      <span
                        className="action"
                      >
                        Zoom In
                      </span>
                      <span
                        className="hotkey"
                      >
                        ⌘+
                      </span>
                    </li>
                  </Memo(MenuItem)>
                  <Memo(MenuItem)
                    className="rc-menu__item--type-checkbox"
                    index={1}
                    key=".1"
                    onClick={[Function]}
                  >
                    <li
                      className="rc-menu__item rc-menu__item--type-checkbox"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      onKeyUp={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onPointerDown={[Function]}
                      onPointerLeave={[Function]}
                      onPointerUp={[Function]}
                      role="menuitem"
                      tabIndex={-1}
                    >
                      <span
                        className="action"
                      >
                        Zoom Out
                      </span>
                      <span
                        className="hotkey"
                      >
                        ⌘-
                      </span>
                    </li>
                  </Memo(MenuItem)>
                  <Memo(MenuItem)
                    className="rc-menu__item--type-checkbox"
                    index={2}
                    key=".2"
                    onClick={[Function]}
                  >
                    <li
                      className="rc-menu__item rc-menu__item--type-checkbox"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      onKeyUp={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onPointerDown={[Function]}
                      onPointerLeave={[Function]}
                      onPointerUp={[Function]}
                      role="menuitem"
                      tabIndex={-1}
                    >
                      Fit to Window Size
                    </li>
                  </Memo(MenuItem)>
                  <Memo(MenuItem)
                    checked={false}
                    index={3}
                    key=".3"
                    onClick={[Function]}
                    type="checkbox"
                  >
                    <li
                      aria-checked={false}
                      className="rc-menu__item rc-menu__item--type-checkbox"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      onKeyUp={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onPointerDown={[Function]}
                      onPointerLeave={[Function]}
                      onPointerUp={[Function]}
                      role="menuitemcheckbox"
                      tabIndex={-1}
                    >
                      Auto Fit to Window Size
                    </li>
                  </Memo(MenuItem)>
                  <Memo(MenuDivider)
                    key=".4"
                  >
                    <li
                      className="rc-menu__divider"
                      role="separator"
                    />
                  </Memo(MenuDivider)>
                  <Memo(MenuItem)
                    checked={true}
                    index={4}
                    key=".5"
                    onClick={[Function]}
                    type="checkbox"
                  >
                    <li
                      aria-checked={true}
                      className="rc-menu__item rc-menu__item--type-checkbox rc-menu__item--checked"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      onKeyUp={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onPointerDown={[Function]}
                      onPointerLeave={[Function]}
                      onPointerUp={[Function]}
                      role="menuitemcheckbox"
                      tabIndex={-1}
                    >
                      Show Grids
                    </li>
                  </Memo(MenuItem)>
                  <Memo(MenuItem)
                    checked={false}
                    index={5}
                    key=".6"
                    onClick={[Function]}
                    type="checkbox"
                  >
                    <li
                      aria-checked={false}
                      className="rc-menu__item rc-menu__item--type-checkbox"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      onKeyUp={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onPointerDown={[Function]}
                      onPointerLeave={[Function]}
                      onPointerUp={[Function]}
                      role="menuitemcheckbox"
                      tabIndex={-1}
                    >
                      Show Rulers
                    </li>
                  </Memo(MenuItem)>
                  <Memo(MenuItem)
                    checked={false}
                    index={6}
                    key=".7"
                    onClick={[Function]}
                    type="checkbox"
                  >
                    <li
                      aria-checked={false}
                      className="rc-menu__item rc-menu__item--type-checkbox"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      onKeyUp={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onPointerDown={[Function]}
                      onPointerLeave={[Function]}
                      onPointerUp={[Function]}
                      role="menuitemcheckbox"
                      tabIndex={-1}
                    >
                      Use Layer Color
                    </li>
                  </Memo(MenuItem)>
                </ul>
              </Memo(MenuList)>
            </li>
          </SubMenu>
          <SubMenu
            align="start"
            direction="right"
            index={3}
            keepMounted={true}
            key=".3"
            label="Machines"
            offsetX={0}
            offsetY={0}
            overflow="visible"
            position="auto"
          >
            <li
              className="rc-menu__submenu"
              onBlur={[Function]}
              onKeyDown={[Function]}
              role="presentation"
            >
              <div
                aria-expanded={false}
                aria-haspopup="true"
                className="rc-menu__item"
                onBlur={[Function]}
                onClick={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onPointerDown={[Function]}
                onPointerLeave={[Function]}
                onPointerUp={[Function]}
                role="menuitem"
                tabIndex={-1}
              >
                Machines
              </div>
            </li>
          </SubMenu>
          <SubMenu
            align="start"
            direction="right"
            index={4}
            keepMounted={true}
            key=".4"
            label="Help"
            offsetX={0}
            offsetY={0}
            overflow="visible"
            position="auto"
          >
            <li
              className="rc-menu__submenu"
              onBlur={[Function]}
              onKeyDown={[Function]}
              role="presentation"
            >
              <div
                aria-expanded={false}
                aria-haspopup="true"
                className="rc-menu__item"
                onBlur={[Function]}
                onClick={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onPointerDown={[Function]}
                onPointerLeave={[Function]}
                onPointerUp={[Function]}
                role="menuitem"
                tabIndex={-1}
              >
                Help
              </div>
            </li>
          </SubMenu>
        </ul>
      </Memo(MenuList)>
    </div>
  </Menu>
</Menu>
`;

exports[`should render correctly test checkbox menu item 3`] = `
<Menu>
  <Menu
    align="start"
    animation={true}
    direction="bottom"
    keepMounted={true}
    menuButton={
      <img
        className="icon"
        src="img/icon.png"
      />
    }
    offsetX={0}
    offsetY={0}
    overflow="visible"
    position="auto"
    reposition="auto"
    submenuCloseDelay={150}
    submenuOpenDelay={300}
    viewScroll="initial"
  >
    <img
      className="icon"
      onClick={[Function]}
      onKeyDown={[Function]}
      src="img/icon.png"
    />
    <div
      className="rc-menu-container"
      onBlur={[Function]}
      onKeyDown={[Function]}
    >
      <Memo(MenuList)
        align="start"
        anchorRef={
          Object {
            "current": <img
              class="icon"
              src="img/icon.png"
            />,
          }
        }
        ariaLabel="Menu"
        containerRef={
          Object {
            "current": <div
              class="rc-menu-container"
            >
              <ul
                aria-label="Menu"
                class="rc-menu rc-menu--closing rc-menu--animation rc-menu--dir-bottom"
                role="menu"
                style="left: 0px; top: 0px;"
                tabindex="-1"
              >
                <li
                  class="rc-menu__submenu"
                  role="presentation"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="true"
                    class="rc-menu__item"
                    role="menuitem"
                    tabindex="-1"
                  >
                    File
                  </div>
                </li>
                <li
                  class="rc-menu__submenu"
                  role="presentation"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="true"
                    class="rc-menu__item"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Edit
                  </div>
                </li>
                <li
                  class="rc-menu__submenu"
                  role="presentation"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="true"
                    class="rc-menu__item"
                    role="menuitem"
                    tabindex="-1"
                  >
                    View
                  </div>
                  <ul
                    aria-label="View"
                    class="rc-menu rc-menu--closing rc-menu--animation rc-menu--dir-right"
                    role="menu"
                    style="left: 0px; top: 0px;"
                    tabindex="-1"
                  >
                    <li
                      class="rc-menu__item rc-menu__item--type-checkbox"
                      role="menuitem"
                      tabindex="-1"
                    >
                      <span
                        class="action"
                      >
                        Zoom In
                      </span>
                      <span
                        class="hotkey"
                      >
                        ⌘+
                      </span>
                    </li>
                    <li
                      class="rc-menu__item rc-menu__item--type-checkbox"
                      role="menuitem"
                      tabindex="-1"
                    >
                      <span
                        class="action"
                      >
                        Zoom Out
                      </span>
                      <span
                        class="hotkey"
                      >
                        ⌘-
                      </span>
                    </li>
                    <li
                      class="rc-menu__item rc-menu__item--type-checkbox"
                      role="menuitem"
                      tabindex="-1"
                    >
                      Fit to Window Size
                    </li>
                    <li
                      aria-checked="false"
                      class="rc-menu__item rc-menu__item--type-checkbox"
                      role="menuitemcheckbox"
                      tabindex="-1"
                    >
                      Auto Fit to Window Size
                    </li>
                    <li
                      class="rc-menu__divider"
                      role="separator"
                    />
                    <li
                      aria-checked="true"
                      class="rc-menu__item rc-menu__item--type-checkbox rc-menu__item--checked"
                      role="menuitemcheckbox"
                      tabindex="-1"
                    >
                      Show Grids
                    </li>
                    <li
                      aria-checked="true"
                      class="rc-menu__item rc-menu__item--type-checkbox rc-menu__item--checked"
                      role="menuitemcheckbox"
                      tabindex="-1"
                    >
                      Show Rulers
                    </li>
                    <li
                      aria-checked="false"
                      class="rc-menu__item rc-menu__item--type-checkbox"
                      role="menuitemcheckbox"
                      tabindex="-1"
                    >
                      Use Layer Color
                    </li>
                  </ul>
                </li>
                <li
                  class="rc-menu__submenu"
                  role="presentation"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="true"
                    class="rc-menu__item"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Machines
                  </div>
                </li>
                <li
                  class="rc-menu__submenu"
                  role="presentation"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="true"
                    class="rc-menu__item"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Help
                  </div>
                </li>
              </ul>
            </div>,
          }
        }
        direction="bottom"
        isOpen={false}
        menuItemFocus={
          Object {
            "position": "initial",
          }
        }
        offsetX={0}
        offsetY={0}
        onClose={[Function]}
        overflow="visible"
        position="auto"
      >
        <ul
          aria-label="Menu"
          className="rc-menu rc-menu--closing rc-menu--animation rc-menu--dir-bottom"
          onAnimationEnd={[Function]}
          onKeyDown={[Function]}
          role="menu"
          style={
            Object {
              "left": "0px",
              "top": "0px",
            }
          }
          tabIndex="-1"
        >
          <SubMenu
            align="start"
            direction="right"
            index={0}
            keepMounted={true}
            key=".0"
            label="File"
            offsetX={0}
            offsetY={0}
            overflow="visible"
            position="auto"
          >
            <li
              className="rc-menu__submenu"
              onBlur={[Function]}
              onKeyDown={[Function]}
              role="presentation"
            >
              <div
                aria-expanded={false}
                aria-haspopup="true"
                className="rc-menu__item"
                onBlur={[Function]}
                onClick={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onPointerDown={[Function]}
                onPointerLeave={[Function]}
                onPointerUp={[Function]}
                role="menuitem"
                tabIndex={-1}
              >
                File
              </div>
            </li>
          </SubMenu>
          <SubMenu
            align="start"
            direction="right"
            index={1}
            keepMounted={true}
            key=".1"
            label="Edit"
            offsetX={0}
            offsetY={0}
            overflow="visible"
            position="auto"
          >
            <li
              className="rc-menu__submenu"
              onBlur={[Function]}
              onKeyDown={[Function]}
              role="presentation"
            >
              <div
                aria-expanded={false}
                aria-haspopup="true"
                className="rc-menu__item"
                onBlur={[Function]}
                onClick={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onPointerDown={[Function]}
                onPointerLeave={[Function]}
                onPointerUp={[Function]}
                role="menuitem"
                tabIndex={-1}
              >
                Edit
              </div>
            </li>
          </SubMenu>
          <SubMenu
            align="start"
            direction="right"
            index={2}
            keepMounted={true}
            key=".2"
            label="View"
            offsetX={0}
            offsetY={0}
            overflow="visible"
            position="auto"
          >
            <li
              className="rc-menu__submenu"
              onBlur={[Function]}
              onKeyDown={[Function]}
              role="presentation"
            >
              <div
                aria-expanded={false}
                aria-haspopup="true"
                className="rc-menu__item"
                onBlur={[Function]}
                onClick={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onPointerDown={[Function]}
                onPointerLeave={[Function]}
                onPointerUp={[Function]}
                role="menuitem"
                tabIndex={-1}
              >
                View
              </div>
              <Memo(MenuList)
                align="start"
                anchorRef={
                  Object {
                    "current": <div
                      aria-expanded="false"
                      aria-haspopup="true"
                      class="rc-menu__item"
                      role="menuitem"
                      tabindex="-1"
                    >
                      View
                    </div>,
                  }
                }
                ariaLabel="View"
                containerRef={
                  Object {
                    "current": <li
                      class="rc-menu__submenu"
                      role="presentation"
                    >
                      <div
                        aria-expanded="false"
                        aria-haspopup="true"
                        class="rc-menu__item"
                        role="menuitem"
                        tabindex="-1"
                      >
                        View
                      </div>
                      <ul
                        aria-label="View"
                        class="rc-menu rc-menu--closing rc-menu--animation rc-menu--dir-right"
                        role="menu"
                        style="left: 0px; top: 0px;"
                        tabindex="-1"
                      >
                        <li
                          class="rc-menu__item rc-menu__item--type-checkbox"
                          role="menuitem"
                          tabindex="-1"
                        >
                          <span
                            class="action"
                          >
                            Zoom In
                          </span>
                          <span
                            class="hotkey"
                          >
                            ⌘+
                          </span>
                        </li>
                        <li
                          class="rc-menu__item rc-menu__item--type-checkbox"
                          role="menuitem"
                          tabindex="-1"
                        >
                          <span
                            class="action"
                          >
                            Zoom Out
                          </span>
                          <span
                            class="hotkey"
                          >
                            ⌘-
                          </span>
                        </li>
                        <li
                          class="rc-menu__item rc-menu__item--type-checkbox"
                          role="menuitem"
                          tabindex="-1"
                        >
                          Fit to Window Size
                        </li>
                        <li
                          aria-checked="false"
                          class="rc-menu__item rc-menu__item--type-checkbox"
                          role="menuitemcheckbox"
                          tabindex="-1"
                        >
                          Auto Fit to Window Size
                        </li>
                        <li
                          class="rc-menu__divider"
                          role="separator"
                        />
                        <li
                          aria-checked="true"
                          class="rc-menu__item rc-menu__item--type-checkbox rc-menu__item--checked"
                          role="menuitemcheckbox"
                          tabindex="-1"
                        >
                          Show Grids
                        </li>
                        <li
                          aria-checked="true"
                          class="rc-menu__item rc-menu__item--type-checkbox rc-menu__item--checked"
                          role="menuitemcheckbox"
                          tabindex="-1"
                        >
                          Show Rulers
                        </li>
                        <li
                          aria-checked="false"
                          class="rc-menu__item rc-menu__item--type-checkbox"
                          role="menuitemcheckbox"
                          tabindex="-1"
                        >
                          Use Layer Color
                        </li>
                      </ul>
                    </li>,
                  }
                }
                direction="right"
                isDisabled={false}
                isOpen={false}
                menuItemFocus={
                  Object {
                    "position": "initial",
                  }
                }
                offsetX={0}
                offsetY={0}
                overflow="visible"
                position="auto"
              >
                <ul
                  aria-label="View"
                  className="rc-menu rc-menu--closing rc-menu--animation rc-menu--dir-right"
                  onAnimationEnd={[Function]}
                  onKeyDown={[Function]}
                  role="menu"
                  style={
                    Object {
                      "left": "0px",
                      "top": "0px",
                    }
                  }
                  tabIndex="-1"
                >
                  <Memo(MenuItem)
                    className="rc-menu__item--type-checkbox"
                    index={0}
                    key=".0"
                    onClick={[Function]}
                  >
                    <li
                      className="rc-menu__item rc-menu__item--type-checkbox"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      onKeyUp={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onPointerDown={[Function]}
                      onPointerLeave={[Function]}
                      onPointerUp={[Function]}
                      role="menuitem"
                      tabIndex={-1}
                    >
                      <span
                        className="action"
                      >
                        Zoom In
                      </span>
                      <span
                        className="hotkey"
                      >
                        ⌘+
                      </span>
                    </li>
                  </Memo(MenuItem)>
                  <Memo(MenuItem)
                    className="rc-menu__item--type-checkbox"
                    index={1}
                    key=".1"
                    onClick={[Function]}
                  >
                    <li
                      className="rc-menu__item rc-menu__item--type-checkbox"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      onKeyUp={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onPointerDown={[Function]}
                      onPointerLeave={[Function]}
                      onPointerUp={[Function]}
                      role="menuitem"
                      tabIndex={-1}
                    >
                      <span
                        className="action"
                      >
                        Zoom Out
                      </span>
                      <span
                        className="hotkey"
                      >
                        ⌘-
                      </span>
                    </li>
                  </Memo(MenuItem)>
                  <Memo(MenuItem)
                    className="rc-menu__item--type-checkbox"
                    index={2}
                    key=".2"
                    onClick={[Function]}
                  >
                    <li
                      className="rc-menu__item rc-menu__item--type-checkbox"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      onKeyUp={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onPointerDown={[Function]}
                      onPointerLeave={[Function]}
                      onPointerUp={[Function]}
                      role="menuitem"
                      tabIndex={-1}
                    >
                      Fit to Window Size
                    </li>
                  </Memo(MenuItem)>
                  <Memo(MenuItem)
                    checked={false}
                    index={3}
                    key=".3"
                    onClick={[Function]}
                    type="checkbox"
                  >
                    <li
                      aria-checked={false}
                      className="rc-menu__item rc-menu__item--type-checkbox"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      onKeyUp={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onPointerDown={[Function]}
                      onPointerLeave={[Function]}
                      onPointerUp={[Function]}
                      role="menuitemcheckbox"
                      tabIndex={-1}
                    >
                      Auto Fit to Window Size
                    </li>
                  </Memo(MenuItem)>
                  <Memo(MenuDivider)
                    key=".4"
                  >
                    <li
                      className="rc-menu__divider"
                      role="separator"
                    />
                  </Memo(MenuDivider)>
                  <Memo(MenuItem)
                    checked={true}
                    index={4}
                    key=".5"
                    onClick={[Function]}
                    type="checkbox"
                  >
                    <li
                      aria-checked={true}
                      className="rc-menu__item rc-menu__item--type-checkbox rc-menu__item--checked"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      onKeyUp={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onPointerDown={[Function]}
                      onPointerLeave={[Function]}
                      onPointerUp={[Function]}
                      role="menuitemcheckbox"
                      tabIndex={-1}
                    >
                      Show Grids
                    </li>
                  </Memo(MenuItem)>
                  <Memo(MenuItem)
                    checked={true}
                    index={5}
                    key=".6"
                    onClick={[Function]}
                    type="checkbox"
                  >
                    <li
                      aria-checked={true}
                      className="rc-menu__item rc-menu__item--type-checkbox rc-menu__item--checked"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      onKeyUp={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onPointerDown={[Function]}
                      onPointerLeave={[Function]}
                      onPointerUp={[Function]}
                      role="menuitemcheckbox"
                      tabIndex={-1}
                    >
                      Show Rulers
                    </li>
                  </Memo(MenuItem)>
                  <Memo(MenuItem)
                    checked={false}
                    index={6}
                    key=".7"
                    onClick={[Function]}
                    type="checkbox"
                  >
                    <li
                      aria-checked={false}
                      className="rc-menu__item rc-menu__item--type-checkbox"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      onKeyUp={[Function]}
                      onMouseDown={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onPointerDown={[Function]}
                      onPointerLeave={[Function]}
                      onPointerUp={[Function]}
                      role="menuitemcheckbox"
                      tabIndex={-1}
                    >
                      Use Layer Color
                    </li>
                  </Memo(MenuItem)>
                </ul>
              </Memo(MenuList)>
            </li>
          </SubMenu>
          <SubMenu
            align="start"
            direction="right"
            index={3}
            keepMounted={true}
            key=".3"
            label="Machines"
            offsetX={0}
            offsetY={0}
            overflow="visible"
            position="auto"
          >
            <li
              className="rc-menu__submenu"
              onBlur={[Function]}
              onKeyDown={[Function]}
              role="presentation"
            >
              <div
                aria-expanded={false}
                aria-haspopup="true"
                className="rc-menu__item"
                onBlur={[Function]}
                onClick={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onPointerDown={[Function]}
                onPointerLeave={[Function]}
                onPointerUp={[Function]}
                role="menuitem"
                tabIndex={-1}
              >
                Machines
              </div>
            </li>
          </SubMenu>
          <SubMenu
            align="start"
            direction="right"
            index={4}
            keepMounted={true}
            key=".4"
            label="Help"
            offsetX={0}
            offsetY={0}
            overflow="visible"
            position="auto"
          >
            <li
              className="rc-menu__submenu"
              onBlur={[Function]}
              onKeyDown={[Function]}
              role="presentation"
            >
              <div
                aria-expanded={false}
                aria-haspopup="true"
                className="rc-menu__item"
                onBlur={[Function]}
                onClick={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onPointerDown={[Function]}
                onPointerLeave={[Function]}
                onPointerUp={[Function]}
                role="menuitem"
                tabIndex={-1}
              >
                Help
              </div>
            </li>
          </SubMenu>
        </ul>
      </Memo(MenuList)>
    </div>
  </Menu>
</Menu>
`;
